<resources>
    <string name="app_name">Movie Hub</string>

    <string name="nav_movie" translatable="false">Movie</string>
    <string name="nav_favorite" translatable="false">Favorite</string>

    <string name="no_movie_found">No Movie Found</string>
    <string name="no_favorite_movie">No Favorite Movie</string>

    <string name="home" translatable="false">Home</string>
    <string name="detail_movie" translatable="false">Detail Movie</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="setting">Setting</string>
    <string name="search">Search</string>
    <string name="change_language">Change Language</string>

    <string name="added_to_favorite">added to Favorite!</string>
    <string name="remove_from_favorite">remove from Favorite!</string>
    <string name="notification_empty_favorite">Favorite Movie is Empty!</string>
    <string name="notification_empty" translatable="false">Nothing Here!</string>
    <string name="notification_error">Something is wrong!</string>

    <string name="share_msg" translatable="false">I\'m looking at movie info on the Movie Hub App, Download this App Now!!</string>

    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec consectetur diam eget volutpat porta. Sed dictum id mi in facilisis. Suspendisse vehicula convallis efficitur. Nunc imperdiet velit ut est hendrerit, vel cursus libero pellentesque. Sed varius vel orci in finibus. Etiam eu enim justo. Duis tempor ipsum in sem aliquam, id vestibulum odio imperdiet. Curabitur condimentum sem lacus, nec mattis diam pharetra nec. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; In ac erat at lorem mattis varius. Etiam eu risus metus.</string>

    <string name="content_description_movie_poster" translatable="false">Movie Poster</string>
    <string name="content_description_back">Back</string>
    <string name="content_description_favorite" translatable="false">Favorite</string>
</resources>